--- a/components/item-card.html
+++ b/components/item-card.html
@@ -23,7 +23,7 @@
     </style>
     
     <paper-material z="1" class="square layout vertical center-justified">
-      <paper-icon-item toggles>
+      <paper-icon-item>
         <div item-icon>${{price}}</div>
         <paper-item-body two-line>
           <div>{{data.pname}}</div>
