--- a/components/login-card.html
+++ b/components/login-card.html
@@ -150,6 +150,7 @@
             "isManager": e.user.isManager,
             "loginLabel": this.loginLabel,
             "loginLevel": this.loginLevel,
+            "cart": e.user.cart,
             "cartSize": e.user.cartSize
           });
         } else {
