updated color scheme, fixed no cart on pure refresh

--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -27,6 +27,9 @@
       }
     </style>
     <style is="custom-style">
+    paper-toolbar {
+      --paper-toolbar-background: #004D40;
+    }
     </style>
     
    <form 
@@ -56,7 +59,7 @@
     <paper-drawer-panel id="drawer">
       <paper-header-panel drawer>
         <paper-toolbar>
-          <div class="title">Simple Store</div>
+          <div class="title">Bob's Bowls</div>
         </paper-toolbar>
         <div class="layout vertical center-justified">
           
