--- a/components/inventory-card.html
+++ b/components/inventory-card.html
@@ -32,6 +32,7 @@
       }
       
       paper-toolbar {
+        --paper-toolbar-background: #004D40;
         --paper-toolbar-height: 40px;
         --paper-toolbar-sm-height: 40px;
       }
