--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -88,8 +88,8 @@
       <paper-header-panel main>
         <paper-toolbar>
           <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
-          
-          <paper-tabs id="tabs" class="bottom self-end" selected="{{activeTab}}">
+          <div class="flex"></div>
+          <paper-tabs id="tabs" class="self-end" selected="{{activeTab}}">
               <paper-tab>BROWSE</paper-tab>
               <template is="dom-if" if="{{isAdmin}}">
                 <paper-tab>INVENTORY</paper-tab>
@@ -199,7 +199,8 @@
         'login.register': 'showRegisterCard',
         'register.register-success': 'showLoginCard',
         'productForm.iron-form-response': 'onUpdateResponse',
-        'cartForm.iron-form-response': 'onCartAddResponse'
+        'cartForm.iron-form-response': 'onCartAddResponse',
+        'drawer.paper-responsive-change': 'onDrawerChange'
       },
       ready: function() {
         this.loginLabel = "Login";
@@ -278,6 +279,11 @@
           }
         } else {
           console.log("app-shell -no response on cart add");
+        }
+      },
+      onDrawerChange: function(e) {
+        if( e.detail.narrow ) {
+          
         }
       }
     });
