--- a/components/inventory-card.html
+++ b/components/inventory-card.html
@@ -91,7 +91,7 @@
         <div class="layout vertical center-justified">
         <template is="dom-repeat" items="{{inventory}}">
           
-          <paper-material class="item layout horizontal">
+          <paper-material class="item layout horizontal" elevation="2">
               
               <div class="layout vertical">
                 <paper-input 
