--- a/components/stats-card.html
+++ b/components/stats-card.html
@@ -72,7 +72,7 @@
       
       <paper-material elevation="2" class="section layout vertical">
         <div class="header layout vertical">
-          <div style="font-size: 20px;" class="layout horizontal center">
+          <div class="layout horizontal center">
             <div class="layout vertical">
               <div>Items Sold: {{itemsSoldMonth}}</div>
               <div>Total Revenue: ${{totalMonthSales}}</div>
@@ -103,7 +103,7 @@
       
       <paper-material elevation="2" class="section layout vertical">
         <div class="header layout vertical">
-          <div style="font-size: 20px;" class="layout horizontal center">
+          <div class="layout horizontal center">
             <div class="layout vertical">
               <div>Items Sold: {{itemsSoldYear}}</div>
               <div>Total Revenue: ${{totalYearSales}}</div>
