--- a/components/stats-card.html
+++ b/components/stats-card.html
@@ -48,7 +48,7 @@
               <div>Average Sale: ${{avgWeekSale}}</div>
             </div>
             <div class="flex"></div>
-            <div style="font-size: 20px;">Past Week</div>
+            <div>Past Week</div>
           </div>
         </div>
         <div class="content layout horizontal justified">
